# MeshCore

./: .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  ci.yml
core/: CMakeLists.txt  Edge.h  FileParser.cpp  FileParser.h  Main.cpp  MeshTriangle.cpp  MeshTriangle.h  ModelSpaceMesh.cpp  ModelSpaceMesh.h  Ray.cpp  Ray.h  Transformation.cpp  Transformation.h  Triangle.cpp  Triangle.h  TriangleTriangleIntersect.cpp  TriangleTriangleIntersect.h  TriangleTriangleIntersectModified.cpp  TriangleTriangleIntersectModified.h  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h  WorldSpaceMesh.cpp  WorldSpaceMesh.h
cuda/: CudaRay.cu  CudaRay.h  CudaStream.cu  CudaStream.h  CudaTriangleTriangleIntersect.cu  CudaTriangleTriangleIntersect.h  CudaWorldSpaceMesh.cu  CudaWorldSpaceMesh.h
data/models/: apple.stl  banana.stl  bobijn-ascii.stl  convexstone.stl  dagger.stl  dodecahedron.stl  frustum.stl  helmet.stl  sphere.stl  star.stl  tetrahedron.stl  torus.stl  tree.stl
demos/: CMakeLists.txt  dummy.cpp
glfw/: CMakeLists.txt  IndexBuffer.h  RenderModel.cpp  RenderModel.h  Renderer.cpp  VertexArray.h  VertexBuffer.cpp  Window.cpp  Window.h
gui/: Application.cpp  ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  OpenGLModel.cpp  OpenGLModel.h  OpenGLRenderWidget.cpp  OpenGLRenderWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  RenderModel.cpp  RenderModel.h  RenderWidget.cpp  RenderWidget.h  ShaderProgramSource.h  TaskWidget.cpp  TaskWidget.h
gui/res/forms/: taskrenderwidget.ui
headless/: CMakeLists.txt  Latency.cpp  Main.cpp
include/meshcore/optimization/: AbstractLocalSearch.h  StripPackingSolution.h
include/meshcore/rendering/: ApplicationWindow.h  OpenGLWidget.h  RenderWidget.h
include/meshcore/tasks/: AbstractTaskObserver.h
optix/: CMakeLists.txt  CudaUtilities.h  Exception.h  HelloOptix.cu  OptixData.h  OptixLaunchParameters.h  OptixPipeLineContext.cpp  OptixPipeLineContext.h  OptixWorldSpaceMesh.cu  OptixWorldSpaceMesh.h  OptixWorldSpaceMeshWithInstance.cu  OptixWorldSpaceMeshWithInstance.h
optix/OptixPrograms/: OptixPrograms.cu  OptixPrograms2.cu  ptx.bat
render/: CMakeLists.txt  GUI.cpp  IndexBuffer.cpp  IndexBuffer.h  RenderModel.cpp  RenderModel.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  Window.cpp  Window.h
render/res/shaders/: Basic.shader  Intermediate.shader
solutions/: AbstractSolution.h  NewOptixData.h  OptixSingleModelSolution.cu  OptixSingleModelSolution.h
src/optimization/: StripPackingSolution.cpp
src/rendering/: AbstractRenderModel.cpp  AbstractRenderModel.h  ApplicationWindow.cpp  GifWrapper.cpp  GifWrapper.h  OpenGLWidget.cpp  RenderAABB.h  RenderBoundsTree.cpp  RenderBoundsTree.h  RenderLine.h  RenderMesh.h  RenderModelControlWidget.cpp  RenderOBB.h  RenderPlane.h  RenderRay.h  RenderSphere.h  RenderWidget.cpp  ShaderProgramSource.cpp  ShaderProgramSource.h
src/utility/: FileParser.cpp
tasks/: AbstractTask.cpp  AbstractTask.h  AbstractTaskObserver.h  ConsoleTaskObserver.h  CudaTask.cpp  CudaTask.h  LatencyBenchMarkTask.cpp  LatencyBenchMarkTask.h  OptixTask.cpp  OptixTask.h  SandboxTask.cpp  SandboxTask.h  SingleModelOptimization.cpp  SingleModelOptimization.h
